--- a/resume/index.html
+++ b/resume/index.html
@@ -34,24 +34,23 @@
     </section>
 
     <!--封面-->
-    <div id="section section0 fp-section fp-table "id="section0" style="height: 775px; background-color: #901347;">
-        <div class="fp-tableCell" style="height:775px;">
-            <div class="info">
-                <div class="img">
-                    <!--<img class="hd-img" src="./Resume_files/head.jpg" alt="My cartoon image">-->
-                    <div class="hd-img"></div>
-                </div>
-                <!--<div class="txt">-->
-                    <!--<h1>1年Web前端求捉走</h1>-->
-                    <!--<hr>-->
+    <!--<div id="section section0 fp-section fp-table "id="section0" style="height: 775px; background-color: #901347;">-->
+        <!--<div class="fp-tableCell" style="height:775px;">-->
+            <!--<div class="info">-->
+                <!--&lt;!&ndash;<div class="img">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<div class="hd-img"></div>&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--&lt;!&ndash;<div class="txt">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<h1>1年Web前端求捉走</h1>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<hr>&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                <!--&lt;!&ndash;<hr>&ndash;&gt;-->
+                <!--<div class="row">-->
+                    <!--&lt;!&ndash;<span class="tag diploma">英语六级</span><span class="tag diploma">计算机二级</span>&ndash;&gt;-->
                 <!--</div>-->
-                <!--<hr>-->
-                <div class="row">
-                    <!--<span class="tag diploma">英语六级</span><span class="tag diploma">计算机二级</span>-->
-                </div>
-            </div>
-        </div>
-    </div>
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <!--个人简介-->
     <div class="section section1 fp-section fp-table active" id="section1" style="height: 775px; background-color: #901347;">
