--- a/resume/index.html
+++ b/resume/index.html
@@ -171,7 +171,7 @@
                 <div class="mask">
                     <div class="back">
                         <h2>博采传媒电影官网</h2>
-                        <p>内容包括浙江博采传媒公司的原创动画、影视作品、节目花絮、人才招聘等等。</p>
+                        <p>负责网站的前端制作。内容包括浙江博采传媒公司的原创动画、影视作品、节目花絮、人才招聘等等。</p>
                         <a class="link" href="http://www.hezifilm.com/" target="_blank" rel="external">查看作品</a>
                         <nav class="tags">
                             <a href="#!/projects/development"></a>
@@ -196,7 +196,7 @@
                     <div class="back">
                         <h2>呼呼收音机产品官网</h2>
                         <p>
-                            介绍呼呼收音机的产品，包括原创儿童故事，原创儿童动画，古诗、绘本，亲子类原创文章，目前更新中。
+                            负责网站的前端制作。介绍呼呼收音机的产品，包括原创儿童故事，原创儿童动画，古诗、绘本，亲子类原创文章，目前更新中。
                         </p>
                         <a class="link" href="http://newhuhu.vsaker.com/" target="_blank" rel="external">查看作品</a>
                         <nav class="tags">
@@ -244,7 +244,7 @@
                     <div class="back">
                         <h2>微信故事大礼包</h2>
                         <p>
-                            移动端的活动页面，包括整理的一些原创儿童故事节目。
+                            负责制作移动端的活动页面，包括整理的一些原创儿童故事节目。
                         </p>
                         <a class="link" href="http://weixin.vsaker.com/Activity/gushidalibao" target="_blank" rel="external">查看作品</a>
                         <nav class="tags">
@@ -268,7 +268,7 @@
                 <div class="mask">
                     <div class="back">
                         <h2>民谣大家唱活动</h2>
-                        <p>移动端的民谣比赛活动页面，包括上传民谣，用户投票和用户分享。</p>
+                        <p>负责制作移动端的民谣比赛活动页面，包括上传民谣，用户投票和用户分享。</p>
                         <a class="link" href="http://weixin.vsaker.com/Minyao/index" target="_blank" rel="external">查看作品</a>
                         <nav class="tags">
                             <a href="#!/projects/development"></a>
@@ -292,7 +292,7 @@
                     <div class="back">
                         <h2>小艺术家免费抢票</h2>
                         <p>
-                            移动端的抢票活动页面，支持限时抢票。
+                            负责制作移动端的抢票活动页面，支持限时抢票。
                         </p>
                         <a class="link" href="http://weixin.vsaker.com/Activity/art_part" target="_blank" rel="external">查看作品</a>
                         <nav class="tags">
