--- a/resume/index.html
+++ b/resume/index.html
@@ -120,7 +120,7 @@
                         <p>2015/04 ~ 2015/10</p>
                         <p>就职于浙江博采传媒</p>
                         <p>移动互联部</p>
-                        <p>- 负责部门的html5应用开发</p>
+                        <p>- 负责部门的html5前端开发</p>
                         <p>- 负责呼呼收音机android TV版维护</p>
                         </div>
                         <!--<img src="images/img4.jpg" width="436" height="300" />-->
