--- a/resume/index.html
+++ b/resume/index.html
@@ -65,7 +65,8 @@
                 <p>23岁 杭州人</p>
                 <p>2010年本科毕业于宁波诺丁汉大学,电气工程自动化专业</p>
                 <p>目前从事Web前端开发</p>
-                <p>状态：在职 期待好的合作机会</p>
+                <p>状态：在职 </p>
+                <p>期待好的合作机会</p>
                 <!--<div style="border-top:#ccc double 6px;position:relative;z-index:9;margin-top:10px;">-->
                     <!--<span style="position:relative;bottom:15px;">兴趣是acg音乐&prpr大姐姐（污</span>-->
                 <!--</div>-->
