--- a/test/geography/geo.html
+++ b/test/geography/geo.html
@@ -24,7 +24,8 @@
         }
         function initMap(point){
 //初始化舆图
-            map = new BMap.Map("map");
+            map = new BMap.Map("allmap");
+//            map.setCurrentCity("杭州");
             map.addControl(new BMap.NavigationControl());
             map.addControl(new BMap.ScaleControl());
             map.addControl(new BMap.OverviewMapControl());
