--- a/test/geography/gnew.html
+++ b/test/geography/gnew.html
@@ -15,9 +15,20 @@
 </html>
 <script type="text/javascript">
     // 百度地图API功能
-    var map = new BMap.Map("allmap");    // 创建Map实例
-    map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);  // 初始化地图,设置中心点坐标和地图级别
-    map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
-    map.setCurrentCity("杭州");          // 设置地图显示的城市 此项是必须设置的
-    map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
+//    var map = new BMap.Map("allmap");    // 创建Map实例
+//    map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);  // 初始化地图,设置中心点坐标和地图级别
+//    map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
+//    map.setCurrentCity("杭州");          // 设置地图显示的城市 此项是必须设置的
+//    map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
+
+
+
+
+    var map = new BMap.Map("allmap");
+    map.setCurrentCity("杭州");
+    map.addControl(new BMap.NavigationControl());
+    map.addControl(new BMap.ScaleControl());
+    map.addControl(new BMap.OverviewMapControl());
+    map.centerAndZoom(point, 15);
+
 </script>
