--- a/test/geography/geo.html
+++ b/test/geography/geo.html
@@ -45,7 +45,7 @@
     </script>
 </head>
 <body>
-<div id="map">
+<div id="allmap">
     <lbs-map width="100px" style="height:100%" center="116.307852,90">
         <lbs-poi name="你在这儿" location="116.307852,12" ></lbs-poi>
     </lbs-map>
