--- a/test/geography/gnew.html
+++ b/test/geography/gnew.html
@@ -29,6 +29,6 @@
     map.addControl(new BMap.NavigationControl());
     map.addControl(new BMap.ScaleControl());
     map.addControl(new BMap.OverviewMapControl());
-    map.centerAndZoom(point, 15);
+    map.centerAndZoom(116.307852,90);
 
 </script>
