--- a/test/geography/golist.html
+++ b/test/geography/golist.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-<lbs-map width="100px" style="height:100%" center="116.307852,90">
+<lbs-map width="100%" style="height:100%" center="116.307852,90">
     <lbs-poi name="！！！！" location="116.307852,12" addr="xxxxx" ></lbs-poi>
 </lbs-map>
 </body>
