--- a/test/geography/golist.html
+++ b/test/geography/golist.html
@@ -10,11 +10,47 @@
         #golist {display: none;}
         @media (max-device-width: 800px){#golist{display: block!important;}}
     </style>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TlXEksq4GWZw5jpuyMmlFkCc"></script>
+    <script type="text/javascript" src="http://developer.baidu.com/map/jsdemo/demo/convertor.js"></script>
+    <script>
+        $(function(){
+            navigator.geolocation.getCurrentPosition(translatePoint); //定位
+        });
+        function translatePoint(position){
+            var currentLat = position.coords.latitude;
+            var currentLon = position.coords.longitude;
+            var gpsPoint = new BMap.Point(currentLon, currentLat);
+            BMap.Convertor.translate(gpsPoint, 0, initMap); //转换坐标 (原文出处：吾吾织梦WwW.55zM.CoM)
+        }
+        function initMap(point){
+//初始化舆图
+            map = new BMap.Map("allmap");
+//            map.setCurrentCity("杭州");
+            map.addControl(new BMap.NavigationControl());
+            map.addControl(new BMap.ScaleControl());
+            map.addControl(new BMap.OverviewMapControl());
+            map.centerAndZoom(point, 15);
+
+
+//            map.addControl(new BMap.MapTypeControl());   //添加地图类型各种控件！卫星啥的
+//            map.addOverlay(new BMap.Marker(point))
+
+
+//            var map = new BMap.Map("allmap");    // 创建Map实例
+//            map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);  // 初始化地图,设置中心点坐标和地图级别
+//            map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
+//            map.setCurrentCity("北京");          // 设置地图显示的城市 此项是必须设置的
+            map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
+        }
+    </script>
 </head>
 <body>
-<lbs-map width="100%" style="height:100%" center="116.307852,90">
-    <lbs-poi name="！！！！" location="116.307852,12" addr="xxxxx" ></lbs-poi>
-</lbs-map>
+<div id="allmap">
+    <lbs-map width="100%" style="height:100%" center="116.307852,90">
+        <lbs-poi name="！！！！" location="116.307852,12" addr="xxxxx" ></lbs-poi>
+    </lbs-map>
+</div>
 </body>
 </html>
 
