--- a/test/geography/geo.html
+++ b/test/geography/geo.html
@@ -3,10 +3,10 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title></title>
+    <title>geo地图标注点</title>
     <style type="text/css">
         *{
-            height: 100%; //设置高度，否则会显示不出来
+            height: 90%; //设置高度，否则会显示不出来
         }
     </style>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -47,7 +47,7 @@
 <body>
 <div id="allmap">
     <lbs-map width="100px" style="height:100%" center="116.307852,90">
-        <lbs-poi name="你在这儿" location="116.307852,12" ></lbs-poi>
+        <lbs-poi name="你在这儿" location="116.307852,12"addr="xxxxx" ></lbs-poi>
     </lbs-map>
 </div>
 </body>
