--- a/test/geography/golist.html
+++ b/test/geography/golist.html
@@ -3,12 +3,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <title>golist地图标注点</title>
+    <title>地图标注点</title>
     <style type="text/css">
-
         body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;}
-        /*#golist {display: none;}*/
-        /*@media (max-device-width: 800px){#golist{display: block!important;}}*/
+        #golist {display: none;}
+        @media (max-device-width: 800px){#golist{display: block!important;}}
     </style>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TlXEksq4GWZw5jpuyMmlFkCc"></script>
