--- a/test/geography/golist.html
+++ b/test/geography/golist.html
@@ -3,24 +3,24 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <title>地图标注点</title>
+    <title>golist地图标注点</title>
     <style type="text/css">
         body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;}
         /*lbs-map{width: 100%;height: 100%;}*/
         #golist {display: none;}
         @media (max-device-width: 800px){#golist{display: block!important;}}
     </style>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <!--<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>-->
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TlXEksq4GWZw5jpuyMmlFkCc"></script>
-    <script type="text/javascript" src="http://developer.baidu.com/map/jsdemo/demo/convertor.js"></script>
+    <!--<script type="text/javascript" src="http://developer.baidu.com/map/jsdemo/demo/convertor.js"></script>-->
 
 </head>
 <body>
-<div id="allmap">
+<!--<div id="allmap">-->
     <lbs-map width="100px" style="height:100%" center="116.307852,90">
         <lbs-poi name="！！！！" location="116.307852,12" addr="xxxxx" ></lbs-poi>
     </lbs-map>
-</div>
+<!--</div>-->
 </body>
 </html>
 
