--- a/test/geography/golist.html
+++ b/test/geography/golist.html
@@ -1,114 +1,62 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-    <title>百度地图API显示多个标注点带提示的代码</title>
-    <!--css-->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
-        body { margin: 0; font-family: "Helvetica,Arial,FreeSans"; color: #000000; font-size: 12px; }
-        .demo_main { padding: 20px; padding-top: 10px; }
-        .demo_title { padding: 10px; margin-bottom: 10px; background-color: #D3D8E0; border: solid 1px gray; }
-        .demo_content { padding: 10px; margin-bottom: 10px; border: solid 1px gray; }
-        fieldset { border: 1px solid gray; }
+        body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
     </style>
-    <!--javascript-->
-    <script src="http://www.w3school.com.cn/jquery/jquery.js" type="text/javascript"></script>
+    <title>添加动画标注点</title>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TlXEksq4GWZw5jpuyMmlFkCc"></script>
+    <script type="text/javascript" src="http://developer.baidu.com/map/jsdemo/demo/convertor.js"></script>
+    <script>
+        $(function(){
+            navigator.geolocation.getCurrentPosition(translatePoint); //定位
+        });
+        function translatePoint(position){
+            var currentLat = position.coords.latitude;
+            var currentLon = position.coords.longitude;
+            var gpsPoint = new BMap.Point(currentLon, currentLat);
+            BMap.Convertor.translate(gpsPoint, 0, initMap); //转换坐标 (原文出处：吾吾织梦WwW.55zM.CoM)
+        }
+        function initMap(point){
+//初始化舆图
+            map = new BMap.Map("allmap");
+//            map.setCurrentCity("杭州");
+            map.addControl(new BMap.NavigationControl());
+            map.addControl(new BMap.ScaleControl());
+            map.addControl(new BMap.OverviewMapControl());
+            map.centerAndZoom(point, 15);
+
+
+//            map.addControl(new BMap.MapTypeControl());   //添加地图类型各种控件！卫星啥的
+//            map.addOverlay(new BMap.Marker(point))
+
+
+//            var map = new BMap.Map("allmap");    // 创建Map实例
+//            map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);  // 初始化地图,设置中心点坐标和地图级别
+//            map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
+//            map.setCurrentCity("北京");          // 设置地图显示的城市 此项是必须设置的
+            map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
+
+
+            var marker = new BMap.Marker(point);  // 创建标注
+            map.addOverlay(marker);               // 将标注添加到地图中
+            marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
+        }
+    </script>
 </head>
 <body>
-<div class="demo_main">
-    <fieldset class="demo_title">
-        百度地图API显示多个标注点带提示的代码
-    </fieldset>
-    <fieldset class="demo_content">
-        <div style="min-height: 300px; width: 100%;" id="map">
-        </div>
-        <script type="text/javascript">
-            var markerArr = [
-                { title: "名称：广州火车站", point: "113.264531,23.157003", address: "广东省广州市广州火车站", tel: "12306" },
-                { title: "名称：广州塔（赤岗塔）", point: "113.330934,23.113401", address: "广东省广州市广州塔（赤岗塔） ", tel: "18500000000" },
-                { title: "名称：广州动物园", point: "113.312213,23.147267", address: "广东省广州市广州动物园", tel: "18500000000" },
-                { title: "名称：天河公园", point: "113.372867,23.134274", address: "广东省广州市天河公园", tel: "18500000000" }
-            ];
-
-            var map; //Map实例
-            function map_init() {
-                map = new BMap.Map("map");
-                //第1步：设置地图中心点，广州市
-                var point = new BMap.Point(113.312213, 23.147267);
-                //第2步：初始化地图,设置中心点坐标和地图级别。
-                map.centerAndZoom(point, 13);
-                //第3步：启用滚轮放大缩小
-                map.enableScrollWheelZoom(true);
-                //第4步：向地图中添加缩放控件
-                var ctrlNav = new window.BMap.NavigationControl({
-                    anchor: BMAP_ANCHOR_TOP_LEFT,
-                    type: BMAP_NAVIGATION_CONTROL_LARGE
-                });
-                map.addControl(ctrlNav);
-                //第5步：向地图中添加缩略图控件
-                var ctrlOve = new window.BMap.OverviewMapControl({
-                    anchor: BMAP_ANCHOR_BOTTOM_RIGHT,
-                    isOpen: 1
-                });
-                map.addControl(ctrlOve);
-
-                //第6步：向地图中添加比例尺控件
-                var ctrlSca = new window.BMap.ScaleControl({
-                    anchor: BMAP_ANCHOR_BOTTOM_LEFT
-                });
-                map.addControl(ctrlSca);
-
-                //第7步：绘制点
-                for (var i = 0; i < markerArr.length; i++) {
-                    var p0 = markerArr[i].point.split(",")[0];
-                    var p1 = markerArr[i].point.split(",")[1];
-                    var maker = addMarker(new window.BMap.Point(p0, p1), i);
-                    addInfoWindow(maker, markerArr[i], i);
-                }
-            }
-
-            // 添加标注
-            function addMarker(point, index) {
-                var myIcon = new BMap.Icon("http://api.map.baidu.com/img/markers.png",
-                        new BMap.Size(23, 25), {
-                            offset: new BMap.Size(10, 25),
-                            imageOffset: new BMap.Size(0, 0 - index * 25)
-                        });
-                var marker = new BMap.Marker(point, { icon: myIcon });
-                map.addOverlay(marker);
-                return marker;
-            }
-
-            // 添加信息窗口
-            function addInfoWindow(marker, poi) {
-                //pop弹窗标题
-                var title = '<div style="font-weight:bold;color:#CE5521;font-size:14px">' + poi.title + '</div>';
-                //pop弹窗信息
-                var html = [];
-                html.push('<table cellspacing="0" style="table-layout:fixed;width:100%;font:12px arial,simsun,sans-serif"><tbody>');
-                html.push('<tr>');
-                html.push('<td style="vertical-align:top;line-height:16px;width:38px;white-space:nowrap;word-break:keep-all">地址:</td>');
-                html.push('<td style="vertical-align:top;line-height:16px">' + poi.address + ' </td>');
-                html.push('</tr>');
-                html.push('</tbody></table>');
-                var infoWindow = new BMap.InfoWindow(html.join(""), { title: title, width: 200 });
-
-                var openInfoWinFun = function () {
-                    marker.openInfoWindow(infoWindow);
-                };
-                marker.addEventListener("click", openInfoWinFun);
-                return openInfoWinFun;
-            }
-
-            //异步调用百度js
-            function map_load() {
-                var load = document.createElement("script");
-                load.src = "http://api.map.baidu.com/api?v=2.0&ak=TlXEksq4GWZw5jpuyMmlFkCc";
-                document.body.appendChild(load);
-            }
-            window.onload = map_load;
-        </script>
-    </fieldset>
-</div>
+<div id="allmap"></div>
 </body>
 </html>
-
+<script type="text/javascript">
+    // 百度地图API功能
+//    var map = new BMap.Map("allmap");
+//    var point = new BMap.Point(116.404, 39.915);
+//    map.centerAndZoom(point, 15);
+//    var marker = new BMap.Marker(point);  // 创建标注
+//    map.addOverlay(marker);               // 将标注添加到地图中
+//    marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
+</script>
