--- a/test/bootstrap-3.3.5/index.html
+++ b/test/bootstrap-3.3.5/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <style type="text/css">
+        .form-signin{
+            max-width: 330px;
+            padding:15px;
+            margin:0 auto;
+        }
+        input{
+            margin-bottom: 3px;
+        }
+    </style>
 </head>
 <body>
 <h2 class="form-signin-heading">欢迎登录</h2>
