--- a/about/index.html
+++ b/about/index.html
@@ -86,17 +86,16 @@
 </header>
 	<div class="article-content">
         <ul>
-        <li>ID：不林</li>
-        <li>年龄：23</li>
-        <li>坐标：杭州</li>
-        <li>职业：前端、unity3d、动效学习中</li>
-        <!--<li>兴趣：ACG、日语、音乐、美剧，喜欢可爱美好有趣<s style="color: transparent">下流</s>的事儿</li>-->
-        <li>兴趣：ACG、日语、翻唱、美剧、户外运动</li>
-        <!--<li>微博：<a href="http://weibo.com/1759844441" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>-->
-        <li>GitHub：<a href="https://github.com/lightsmeki" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>
+        <li>昵称:不林</li>
+        <li>23</li>
+        <li>杭州人</li>
+        <li>目前就职于浙江博采传媒，主要做安卓app开发。</li>
+        <li>今后想做电商类app，尤其是想做专业的电子产品交易平台。</li>
+        <li>如果你也有类似想法，欢迎交流。</li>
+        <li>QQ：371200212</li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
-        <!--<li>motto：做爱做的事，交配交的人( ﾟ∀ﾟ)( ﾟ∀ﾟ)( ﾟ∀ﾟ)</li>-->
-        <li>详细介绍：<a href="http://zy06812.digitcv.com/">请戳这里( ﾟ∀ﾟ)</a></li></li>
+        <li>微博：<a href="http://weibo.com/1759844441" target="_blank" rel="external">私人微博，聊天交友用意，不代表任何公司立场</a></li>
+        <!--<li>详细介绍：<a href="http://zy06812.digitcv.com/">请戳这里( ﾟ∀ﾟ)</a></li></li>-->
         <!--<li>Email：<a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#x64;&#101;&#x76;&#101;&#108;&#111;&#x70;&#101;&#114;&#x2e;&#x7a;&#104;&#97;&#x69;&#x74;&#x61;&#x6f;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#x63;&#x6f;&#109;">&#x64;&#101;&#x76;&#101;&#108;&#111;&#x70;&#101;&#114;&#x2e;&#x7a;&#104;&#97;&#x69;&#x74;&#x61;&#x6f;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#x63;&#x6f;&#109;</a></li>-->
         </ul>
     <!--<embed src="http://www.xiami.com/widget/0_1773340641/singlePlayer.swf" type="application/x-shockwave-flash" width="257" height="33" wmode="transparent">-->
