--- a/resume/index.html
+++ b/resume/index.html
@@ -76,14 +76,10 @@
                 <h1>个人简介</h1>
                 <p>周烨</p>
                 <p>23岁 杭州人</p>
-                <p>2010年本科毕业于宁波诺丁汉大学, 电气工程自动化专业</p>
-                <p>目前从事Web前端开发</p>
+                <p>2010届本科毕业于宁波诺丁汉大学, 电气工程自动化专业</p>
+                <p>目前主要从事安卓开发、Web前端开发</p>
                 <p>状态：在职 </p>
                 <p>期待好的合作机会</p>
-                <!--<div style="border-top:#ccc double 6px;position:relative;z-index:9;margin-top:10px;">-->
-                    <!--<span style="position:relative;bottom:15px;">兴趣是acg音乐&prpr大姐姐（污</span>-->
-                <!--</div>-->
-                <!--<p><s>兴趣是acg音乐&prpr大姐姐(污</s></p>-->
                 <hr>
             </div>
             <!--<hr>-->
@@ -131,11 +127,12 @@
                     </li>
                     <li id="2015">
                         <div class="inner">
-                        <p>2015/04 ~ 2015/10</p>
+                        <p>2015/04 ~ 至今</p>
                         <p>就职于浙江博采传媒</p>
                         <p>移动互联部</p>
-                        <p>- 负责部门的html5前端开发</p>
+                        <p>- 负责部门的html5活动页的制作</p>
                         <p>- 负责呼呼收音机android TV版维护</p>
+                        <p>- 负责呼呼收音机android新版开发测试及维护</p>
                         </div>
                         <!--<img src="images/img4.jpg" width="436" height="300" />-->
                     </li>
