--- a/about/index.html
+++ b/about/index.html
@@ -91,15 +91,15 @@
 	<div class="article-content">
         <ul>
         <li>Burin(不林)</li>
-        <li>23</li>
-        <li>杭州人</li>
-        <li>目前就职于浙江博采传媒，主要做安卓app开发。</li>
-        <li>想做电商类app，尤其是想做专业的电子产品交易平台。打算先做出demo，再进行调整。</li>
-        <li>如果你也有类似想法，欢迎交流。</li>
+        <li>24</li>
+        <li>一个普通妹子(´・ω・｀)</li>
+        <li>坐标杭州</li>
+        <li>兴趣是ACG，逛美术展，健身读书</li>
+        <li>目前主攻安卓app开发，也曾做过web前端开发。</li>
         <li>QQ：371200212</li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
-        <li>微博：<a href="http://weibo.com/1759844441" target="_blank" rel="external">私人微博，不代表公司立场</a></li>
-         </ul>
+        <li>话有点少，不过欢迎交流~</li>
+        </ul>
     <!--<embed src="http://www.xiami.com/widget/0_1773340641/singlePlayer.swf" type="application/x-shockwave-flash" width="257" height="33" wmode="transparent">-->
 	</div>
 		<footer class="article-footer clearfix">
