--- a/about/index.html
+++ b/about/index.html
@@ -92,13 +92,14 @@
         <ul>
         <li>Burin(不林)</li>
         <li>24</li>
-        <li>一个普通妹子(´・ω・｀)</li>
+        <li>普通妹子</li>
         <li>坐标杭州</li>
-        <li>兴趣是ACG，逛美术展，健身读书</li>
-        <li>目前主攻安卓app开发，也曾做过web前端开发。</li>
+        <li>兴趣是独立游戏，英语日语，美术展，健身读书<s>，prpr可爱帅气的小姐姐</s></li>
+        <li>目前主攻Android开发，也曾做过web前端以及嵌入式相关</li>
         <li>QQ：371200212</li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
-        <li>话有点少，不过欢迎交流~</li>
+        <li>欢 迎 交 流</li>
+        <li>ホモォ…┌(┌^o^)┐ホモォ・・・ ホモォ…┌(^o^ ┐)┐ホモォ・・</li>
         </ul>
     <!--<embed src="http://www.xiami.com/widget/0_1773340641/singlePlayer.swf" type="application/x-shockwave-flash" width="257" height="33" wmode="transparent">-->
 	</div>
