--- a/about/index.html
+++ b/about/index.html
@@ -92,10 +92,10 @@
         <ul>
         <li>Burin(不林)</li>
         <li>24</li>
-        <li>普通妹子</li>
         <li>坐标杭州</li>
-        <li>兴趣是独立游戏，英语日语，美术展，健身读书<s>，prpr可爱帅气的小姐姐</s></li>
-        <li>目前主攻Android开发，也曾做过web前端以及嵌入式相关</li>
+        <li>主攻Android开发，也曾做过web前端以及嵌入式相关</li>
+        <li>兴趣是独立游戏，英语日语，逛美术展，健身读书</li>
+        <li>喜欢研究各种有意思的事物</li>
         <li>QQ：371200212</li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
         <li>欢 迎 交 流</li>
