--- a/resume/index.html
+++ b/resume/index.html
@@ -75,11 +75,10 @@
             <div class="txt">
                 <h1>个人简介</h1>
                 <p>周烨</p>
-                <p>23岁 杭州人</p>
-                <p>2010届本科毕业于宁波诺丁汉大学, 电气工程自动化专业</p>
-                <p>目前主要从事安卓开发、Web前端开发</p>
-                <p>状态：在职 </p>
-                <p>期待好的合作机会</p>
+                <p>24 杭州人</p>
+                <p>2年Android开发经验</p>
+                <p>目前正在求职中</p>
+                <p>期待与您共事:)</p>
                 <hr>
             </div>
             <!--<hr>-->
