--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
 			
 			<div id="textlogo">
 				<h1 class="site-name"><a href="/" title="Burin&#39;s blog">Burin&#39;s blog</a></h1>
-				<h2 class="blog-motto">不林的博客( ﾟ∀ﾟ)</h2>
+				<h2 class="blog-motto">不林的博客 <br/>( ﾟ∀ﾟ)よろしく❤</h2>
 			</div>
 			<div class="navbar"><a class="navbutton navmobile" href="#" title="菜单">
 			</a></div>
@@ -92,11 +92,20 @@
         <ul>
         <li>Burin(不林)</li>
         <li>24</li>
+        <li>普通妹子</li>
         <li>坐标杭州</li>
+        <li>本科宁波诺丁汉电气自动化专业</li>
         <li>主攻Android开发，也曾做过web前端以及嵌入式相关</li>
         <li>兴趣是独立游戏，英语日语，逛美术展，健身读书</li>
-        <li>喜欢研究各种有意思的事物</li>
+        <li>基本上中立和平，是个随和的逗比</li>
+        <li>不擅长的事情是化妆，以及应付性格糟糕的人，间歇性因负能量掉入地底</li>
+        <li>耐心满点但包容心不足</li>
+        <li>喜欢可爱的小姐姐prpr</li>
+        <li>擅长钢琴二胡，开脑洞</li>
+        <li>宅龄10+ 曾niconico k岛常驻民</li>
+        <li>喜欢研究各种有意思的事物，也喜欢交朋友</li>
         <li>QQ：371200212</li>
+        <li>微信：zy06812</li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
         <li>欢 迎 交 流</li>
         <li>ホモォ…┌(┌^o^)┐ホモォ・・・ ホモォ…┌(^o^ ┐)┐ホモォ・・</li>
