--- a/about/index.html
+++ b/about/index.html
@@ -94,7 +94,7 @@
         <li>24</li>
         <li>坐标杭州</li>
         <li>主攻Android开发，也曾做过web前端以及嵌入式相关</li>
-        <li>喜欢研究各种有意思的事物</li>
+        <li>喜欢研究各种有意思的事物，兴趣是美术音乐&独立游戏</li>
         <li>QQ：371200212</li>
         <li>微信：zy06812</li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
