--- a/resume/index.html
+++ b/resume/index.html
@@ -20,9 +20,9 @@
 
     <section id="nav" style="position: fixed;">
         <header class="headcontainer">
-            <a class="fl" href="#section1" id="logo" hidefocus="true">返回</a>
+            <!--<a class="fl" href="#section1" id="logo" hidefocus="true">返回</a>-->
             <nav class="fr">
-                <a href="#section1" id="nav-intro" hidefocus="true">个人简介</a>
+                <a href="#section1" id="nav-intro" hidefocus="false">个人简介</a>
                 <a href="#section2" id="nav-workEXP" hidefocus="true">工作经历</a>
                 <a href="#section3" id="nav-prjEXP" hidefocus="true">项目经历</a>
                 <a href="#section4" id="nav-skill" hidefocus="true">专业技能</a>
@@ -118,9 +118,9 @@
                             <p>2015/04 ~ 至今</p>
                             <p>就职于浙江博采传媒</p>
                             <p>移动互联部</p>
-                            <p>- 负责部门的html5活动页的制作</p>
-                            <p>- 负责呼呼收音机android TV版维护</p>
-                            <p>- 负责呼呼收音机android新版开发测试及维护</p>
+                            <p>- 负责呼呼收音机app开发与维护</p>
+                            <p>- 负责呼呼收音机安卓TV版维护</p>
+                            <p>- 负责部分网页的制作</p>
                         </div>
                         <!--<img src="images/img4.jpg" width="436" height="300" />-->
                     </li>
@@ -139,7 +139,6 @@
                 <ul id="dates">
                     <li><a href="#2015">2015</a></li>
                     <li><a href="#2014">2014</a></li>
-
                 </ul>
             </div>
 
