--- a/test/web/index.html
+++ b/test/web/index.html
@@ -1,10 +1,21 @@
 
 <html>
+
+
+
 <script language='JavaScript'>
     function showAndroidToast(toast)
     {
         Android.showToast(toast);
     }
+    function setShareInfo(title,url)
+    {
+        Android.setShareInfo(title,url);
+    }
+//    function myfun3(toast)
+//    {
+//        Android.showToast(toast);
+//    }
 </script>
 
 <br/><br/><br/><br/><br/><br/><br/><br/>
