--- a/test/web/index.html
+++ b/test/web/index.html
@@ -1,7 +1,4 @@
-
 <html>
-
-
 
 <script language='JavaScript'>
     function showAndroidToast(toast)
@@ -12,12 +9,15 @@
     {
         Android.setShareInfo(title,url);
     }
-//    function myfun3(toast)
-//    {
-//        Android.showToast(toast);
-//    }
+    function setShareInfo2()
+    {
+        Android.setShareInfo2('标题222','http://www.baidu.com/');
+    }
+
 </script>
 
 <br/><br/><br/><br/><br/><br/><br/><br/>
 <input type="button" value ="title:你好 url:www.baidu.com" onclick="showAndroidToast('Hello Android!');"/>
+<input type="button" value ="sharebtn" onclick="setShareInfo('标题','http://weixin.vsaker.com');"/>
+
 <html>
