--- a/test/web/index.html
+++ b/test/web/index.html
@@ -11,7 +11,9 @@
     }
     function setShareInfo2()
     {
-        Android.setShareInfo2('标题222','http://www.baidu.com/');
+        var title = '标题222';
+        var url = 'http://www.baidu.com/';
+        Android.setShareInfo2(title,url);
     }
 
 </script>
