--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   <div class="tagcloudlist">
     <p class="asidetitle">标签云</p>
     <div class="tagcloudlist clearfix">
-      <a href="#" style="font-size: 10.00px;">萌萌哒</a>
+<!--       <a href="#" style="font-size: 10.00px;">萌萌哒</a> -->
       <!--<a href="/tags/AS/" style="font-size: 10.00px;">AS</a>-->
       <!--<a href="/tags/Adapter/" style="font-size: 10.00px;">Adapter</a>-->
       <!--<a href="/tags/Android/" style="font-size: 20.00px;">Android</a>-->
@@ -395,7 +395,7 @@
   <div class="linkslist">
   <p class="asidetitle">友情链接</p>
     <ul>
-      <!--<li><a href="http://imid.me/" target="_blank" title="iMID">iMID's Blog</a></li>-->
+      <li><a href="https://juejin.im/" target="_blank" title="掘金">掘金</a></li>
       <!--<li><a href="http://www.trinea.cn/" target="_blank" title="trinea">Trinea's Blog</a></li>-->
       <!--<li><a href="http://stormzhang.github.io/" target="_blank" title="stormzhang">StormZhang's Blog</a></li>-->
       <!--<li><a href="http://daimajia.com/" target="_blank" title="daimajia">DaiMaJia.Blog</a></li>-->
