--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
 			
 			<div id="textlogo">
 				<h1 class="site-name"><a href="/" title="Meki&#39;s blog">Meki&#39;s blog</a></h1>
-				<h2 class="blog-motto">不林的博客  ( ﾟ∀ﾟ)ﾉ❤</h2>
+				<h2 class="blog-motto">Meki的博客  ( ﾟ∀ﾟ)ﾉ❤</h2>
 			</div>
 			<div class="navbar"><a class="navbutton navmobile" href="#" title="菜单">
 			</a></div>
