--- a/about/index.html
+++ b/about/index.html
@@ -92,14 +92,14 @@
         <ul>
         <li>Meki</li>
         <li>1992/02</li>
-        <li>杭州人</li>
-        <li>主攻Android开发，也做过一些web前端以及嵌入式相关</li>
-	<li>技术容易过时，做工具或是平台是一个不坏的选择。个人更倾向做平台，说不准以后有比移动平台更便捷的用户入口呢，像刀剑神域剧场版里面的场景。</li>
+        <li>坐标杭州</li>
+        <li>Android开发，也做一些web前端以及嵌入式相关杂七杂八</li>
+	<li>技术容易过时，做工具或是平台是一个不坏的选择。个人更倾向做平台，说不准以后有比移动平台更便捷的用户入口，像刀剑神域剧场版里面的场景。</li>
         <li><s>QQ：371200212</s>（已弃用，请微信联系）</li>
         <li>微信：zy06812</li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
-        <li>任 何 想 法 都 欢 迎 交 流</li>
-        <li>ホモォ…┌(┌^o^)┐ホモォ・・・ ホモォ…┌(^o^ ┐)┐ホモォ・・</li>
+        <li>欢迎交流</li>
+        <li>┌(┌^o^)┐…・・・ …┌(^o^ ┐)┐</li>
 
         </ul>
     <!--<embed src="http://www.xiami.com/widget/0_1773340641/singlePlayer.swf" type="application/x-shockwave-flash" width="257" height="33" wmode="transparent">-->
