--- a/about/index.html
+++ b/about/index.html
@@ -94,8 +94,7 @@
         <li>1992/02</li>
         <li>坐标杭州</li>
         <li>Android开发，也做一些web前端以及嵌入式相关杂七杂八</li>
-	<li>技术容易过时，做工具或是平台是一个不坏的选择。个人更倾向做平台，说不准以后有比移动平台更便捷的用户入口，像刀剑神域剧场版里面的场景。</li>
-        <li><s>QQ：371200212</s>（已弃用，请微信联系）</li>
+	<li>技术容易过时，做工具或是平台是一个不坏的选择。个人更倾向做平台，说不准以后有比移动更便捷的用户入口，例如刀剑神域剧场版里面的场景。</li>
         <li>微信：zy06812</li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
         <li>欢迎交流</li>
